--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -8,7 +8,11 @@
       "jasmine"
     ]
   },
+  "files": [
+    "src/test.ts"
+  ],
   "include": [
-    "src/**/*.ts"
+    "src/**/*.spec.ts",
+    "src/**/*.d.ts"
   ]
 }
